Add sidecar to hotelReservation

--- a/hotelReservation/helm-chart/hotelreservation/values.yaml
+++ b/hotelReservation/helm-chart/hotelreservation/values.yaml
@@ -1,4 +1,7 @@
 global:
+  # TODO make this configured from env var
+    # --set env.DOCKER_USER=$DOCKER_USER
+  dockerUser: estherlyoon
   nameOverride: ""
   fullnameOverride: ""
   mainChart: hotelres
