socialNetwork and mediaMicoservices sidecear support

--- a/hotelReservation/helm-chart/hotelreservation/values.yaml
+++ b/hotelReservation/helm-chart/hotelreservation/values.yaml
@@ -1,7 +1,5 @@
 global:
-  # TODO make this configured from env var
-    # --set env.DOCKER_USER=$DOCKER_USER
-  dockerUser: estherlyoon
+  dockerUser: ""
   nameOverride: ""
   fullnameOverride: ""
   mainChart: hotelres
